fix bug text not wrap and added closure fn in sumbitFormList.js

--- a/css/main.css
+++ b/css/main.css
@@ -361,6 +361,7 @@ img {
 .grid-container {
   display: grid;
   justify-items: center;
+  word-break: break-all;
   row-gap: 3rem;
   padding-block: 3rem 5rem;
 }
